# DAIMAn

./: CMakeLists.txt  LICENSE  README.md  dependencies.txt  test_concept.cpp
modules/: FindLAPACKE.cmake  FindLAPACKEXT.cmake  FindOpenBabel2.cmake
src/: CMakeLists.txt  cgal_routines.cpp  cgal_routines.h  cgal_surface.cpp  cgal_surface.h  commons.cpp  commons.h  cslwl.cpp  cslwl.h  document.cpp  document.h  eps_writer.cpp  eps_writer.h  functions.cpp  functions.h  generalinfo.cpp  generalinfo.h  hartmann.cpp  hartmann.h  main.cpp  sector.cpp  sector.h  threadcontroller.cpp  threadcontroller.h  volumetricelfthread.cpp  volumetricelfthread.h  zfxsurfgrad.cpp  zfxsurfgrad.h
src/camera/: camera.cpp  camera.h  camerasetup.cpp  camerasetup.h
src/dataio/: aim_sum_r.cpp  aim_sum_r.h  eps_w.cpp  eps_w.h
src/gui/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  parameters.cpp  parameters.h  progressdlg.cpp  progressdlg.h  projecttree.cpp  projecttree.h  toolbar.cpp  toolbar.h
src/old_misc/: 2dmatrix.cpp  2dmatrix.h  charlines.cpp  charlines.h  parser.cpp  parser.h  structs.h
src/primitives/: critical_point.hpp
src/wavefunction/: wfndata.cpp  wfndata.h  wfxparser.cpp
src_v2/: CMakeLists.txt  main.cpp  obrezki.txt
src_v2/data/: atomic_group.hpp  critical_point.hpp  math_property_map.hpp  wfndata.cpp  wfndata.h  wfxparser.h
src_v2/document/: algorithm.cpp  algorithm.hpp  base_vertex.hpp  doc_tree.cpp  doc_tree.hpp  graph.h  ref_decorator.hpp  visitors.h  visitors.hpp
src_v2/multithread/: base_task.cpp  base_task.h  thread_pool.cpp  thread_pool.h
src_v2/multithread/tasks/: mgp_parser.cpp  mgp_parser.h  wfx_parser.cpp  wfx_parser.h  wfxparser.cpp  wfxparser.h
src_v2/widgets/: client_splitter.cpp  client_splitter.h  gl_screen.cpp  gl_screen.h  gui_config.cpp  gui_config.h  main_menu.cpp  main_menu.h  main_window.cpp  main_window.h  tree_ctrl.cpp  tree_ctrl.h
src_v2/widgets/custom_3d/: line_entity.cpp  line_entity.h  orbital_camera_controller.cpp  orbital_camera_controller.h  scene_entity.cpp  scene_entity.h  top3dentity.cpp  top3dentity.hpp
src_v2/widgets/tree_items/: atom_item.cpp  atom_item.h  atomic_group_item.cpp  atomic_group_item.h  atomic_groups_item.cpp  atomic_groups_item.h  iitem.h  loaded_atoms_item.cpp  loaded_atoms_item.h  wfx_item.cpp  wfx_item.h  wfx_item.hpp
src_v2/widgets/tree_items/critical_points/: cp_item.cpp  cp_item.h  cps_folder_type_item.cpp  cps_folder_type_item.h  cps_group.cpp  cps_group.h  critical_points_item.cpp  critical_points_item.h  nacp_items.cpp  nacp_items.h  nnacp_items.cpp  nnacp_items.h
test/: CycloPropene.wfx  N4C2C2H.mgp  N4C2C2H.wfx  TetraHedrane.wfx
